This file documents the revision history for the Monitoring Webinterface Thruk.

1.0.8    Mon Jul 25 23:29:18 CEST 2011
          - added excel export for all logfile pages
          - added "view configuration" link in host/service extinfo page
          - added contacts to host/service config page
          - added icons to command seletion
          - added description to init script (fixes #32)
          - fixed scheduling downtimes on mutliple backends (fixes #33)
          - fixed custom icons in Nuvola theme
          - fixed problem with writing cgi.cfg
          - fixed header toggle icon

1.0.7   Wed Jun 29 21:57:04 CEST 2011
          - fixed url in link popup

1.0.6   Thu Jun 26 12:41:09 CEST 2011
          - added wait_timeout option
          - added nicer/clearer command boxes
          - disabled wait feature when rescheduling checks on hosts with spaces
            - livestatus does not support that
          - Nuvola Theme: small design fixes (Juergen Vigna)
          - fixed zoom of trends graph
          - fixed problem with multiple filters
          - fixed availability when selected all hosts
          - fixed problem with quotes in plugin output in the statusmap

1.0.5   Thu Jun  2 22:03:30 CEST 2011
          - removed display of duplicate services where services are added twice to a servicegroup
          - hide check activity icon after 5 seconds
          - conf tool: added remove password button
          - shinken:
            - added priority filter (criticity)
            - added config option to rename priorities
          - fixed sendig commands to multiple backends

1.0.4   Fri May 20 14:05:18 CEST 2011
          - added missing license file
          - added business view for shinken backend
          - added better error message when log4perl config cannot be found
          - fixed availability calculation with hard states

1.0.3   Thu May 12 20:05:16 CEST 2011
          - fixed problem with some chars in excel export