@@ -472,13 +472,16 @@ root/thruk/themes/Classic/images/down.gif
 root/thruk/themes/Classic/images/downtime.gif
 root/thruk/themes/Classic/images/drag.png
 root/thruk/themes/Classic/images/drag_hover.png
+root/thruk/themes/Classic/images/edit.png
 root/thruk/themes/Classic/images/empty.gif
 root/thruk/themes/Classic/images/enabled.gif
+root/thruk/themes/Classic/images/error.png
 root/thruk/themes/Classic/images/extinfo.gif
 root/thruk/themes/Classic/images/favicon.ico
 root/thruk/themes/Classic/images/flapping.gif
 root/thruk/themes/Classic/images/github.png
 root/thruk/themes/Classic/images/greendot.gif
+root/thruk/themes/Classic/images/help.png
 root/thruk/themes/Classic/images/histogram.png
 root/thruk/themes/Classic/images/history.gif
 root/thruk/themes/Classic/images/hostevent.gif
@@ -579,14 +582,17 @@ root/thruk/themes/Exfoliation/images/down.gif
 root/thruk/themes/Exfoliation/images/downtime.gif
 root/thruk/themes/Exfoliation/images/drag.png
 root/thruk/themes/Exfoliation/images/drag_hover.png
+root/thruk/themes/Exfoliation/images/edit.png
 root/thruk/themes/Exfoliation/images/empty.gif
 root/thruk/themes/Exfoliation/images/enabled.gif
+root/thruk/themes/Exfoliation/images/error.png
 root/thruk/themes/Exfoliation/images/extinfo.gif
 root/thruk/themes/Exfoliation/images/favicon.ico
 root/thruk/themes/Exfoliation/images/flapping.gif
 root/thruk/themes/Exfoliation/images/github.png
 root/thruk/themes/Exfoliation/images/graph.gif
 root/thruk/themes/Exfoliation/images/greendot.gif
+root/thruk/themes/Exfoliation/images/help.png
 root/thruk/themes/Exfoliation/images/histogram.png
 root/thruk/themes/Exfoliation/images/history.gif
 root/thruk/themes/Exfoliation/images/hostevent.gif
@@ -743,14 +749,17 @@ root/thruk/themes/Nuvola/images/down.gif
 root/thruk/themes/Nuvola/images/downtime.gif
 root/thruk/themes/Nuvola/images/drag.png
 root/thruk/themes/Nuvola/images/drag_hover.png
+root/thruk/themes/Nuvola/images/edit.png
 root/thruk/themes/Nuvola/images/empty.gif
 root/thruk/themes/Nuvola/images/enabled.gif
+root/thruk/themes/Nuvola/images/error.png
 root/thruk/themes/Nuvola/images/extinfo.gif
 root/thruk/themes/Nuvola/images/favicon.ico
 root/thruk/themes/Nuvola/images/flapping.gif
 root/thruk/themes/Nuvola/images/github.png
 root/thruk/themes/Nuvola/images/green.gif
 root/thruk/themes/Nuvola/images/greendot.gif
+root/thruk/themes/Nuvola/images/help.png
 root/thruk/themes/Nuvola/images/histogram.png
 root/thruk/themes/Nuvola/images/history.gif
 root/thruk/themes/Nuvola/images/hostevent.gif
@@ -900,14 +909,17 @@ root/thruk/themes/Thruk/images/down.gif
 root/thruk/themes/Thruk/images/downtime.gif
 root/thruk/themes/Thruk/images/drag.png
 root/thruk/themes/Thruk/images/drag_hover.png
+root/thruk/themes/Thruk/images/edit.png
 root/thruk/themes/Thruk/images/empty.gif
 root/thruk/themes/Thruk/images/enabled.gif
+root/thruk/themes/Thruk/images/error.png
 root/thruk/themes/Thruk/images/extinfo.gif
 root/thruk/themes/Thruk/images/favicon.ico
 root/thruk/themes/Thruk/images/flapping.gif
 root/thruk/themes/Thruk/images/github.png
 root/thruk/themes/Thruk/images/green.gif
 root/thruk/themes/Thruk/images/greendot.gif
+root/thruk/themes/Thruk/images/help.png
 root/thruk/themes/Thruk/images/histogram.png
 root/thruk/themes/Thruk/images/history.gif
 root/thruk/themes/Thruk/images/hostevent.gif
@@ -963,8 +975,8 @@ root/thruk/themes/Thruk/images/up.gif
 root/thruk/themes/Thruk/images/waiting.gif
 root/thruk/themes/Thruk/images/warning.png
 root/thruk/themes/Thruk/images/yellow.gif
-root/thruk/themes/Thruk/stylesheets/thruk.css
 root/thruk/themes/Thruk/stylesheets/Thruk.css
+root/thruk/themes/Thruk/stylesheets/thruk.css
 root/thruk/themes/Thruk/stylesheets/thruk_noframes.css
 root/thruk/themes/Thruk/stylesheets/thruk_noframes_ie_fix.css
 root/thruk/themes/Vautour/images/accept.png
@@ -995,13 +1007,16 @@ root/thruk/themes/Vautour/images/down.gif
 root/thruk/themes/Vautour/images/downtime.gif
 root/thruk/themes/Vautour/images/drag.png
 root/thruk/themes/Vautour/images/drag_hover.png
+root/thruk/themes/Vautour/images/edit.png
 root/thruk/themes/Vautour/images/empty.gif
 root/thruk/themes/Vautour/images/enabled.gif
+root/thruk/themes/Vautour/images/error.png
 root/thruk/themes/Vautour/images/extinfo.gif
 root/thruk/themes/Vautour/images/favicon.ico
 root/thruk/themes/Vautour/images/flapping.gif
 root/thruk/themes/Vautour/images/github.png
 root/thruk/themes/Vautour/images/greendot.gif
+root/thruk/themes/Vautour/images/help.png
 root/thruk/themes/Vautour/images/histogram.png
 root/thruk/themes/Vautour/images/history.gif
 root/thruk/themes/Vautour/images/hostevent.gif
@@ -1149,14 +1164,17 @@ root/thruk/themes/Wakizashi/images/down.gif
 root/thruk/themes/Wakizashi/images/downtime.gif
 root/thruk/themes/Wakizashi/images/drag.png
 root/thruk/themes/Wakizashi/images/drag_hover.png
+root/thruk/themes/Wakizashi/images/edit.png
 root/thruk/themes/Wakizashi/images/empty.gif
 root/thruk/themes/Wakizashi/images/enabled.gif
+root/thruk/themes/Wakizashi/images/error.png
 root/thruk/themes/Wakizashi/images/extinfo.gif
 root/thruk/themes/Wakizashi/images/favicon.ico
 root/thruk/themes/Wakizashi/images/flapping.gif
 root/thruk/themes/Wakizashi/images/form_background.png
 root/thruk/themes/Wakizashi/images/github.png
 root/thruk/themes/Wakizashi/images/greendot.gif
+root/thruk/themes/Wakizashi/images/help.png
 root/thruk/themes/Wakizashi/images/histogram.png
 root/thruk/themes/Wakizashi/images/history.gif
 root/thruk/themes/Wakizashi/images/hostevent.gif
